--- a/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
@@ -7,8 +7,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:padding="12dp"
-        android:src="@drawable/avatar_checkin"
-        android:scaleType="center"/>
+        android:src="@drawable/avatar_checkin" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
