--- a/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
@@ -4,14 +4,14 @@
     android:visibility="gone"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <LinearLayout
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="95dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_nospots"/>
