--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -242,6 +242,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:layout_height="56dp"
                         style="@style/CharacteristicsDiveSpotListIcons"
                         android:src="@drawable/ic_addds_visibility" />
 
@@ -349,6 +350,7 @@
                             android:layout_height="match_parent"
                             android:dropDownWidth="150dp"
                             android:gravity="center_vertical"
+                            app:backgroundTint="@color/spinner_triangle_color"
                             android:popupBackground="@color/white" />
                 </LinearLayout>
 
@@ -375,6 +377,7 @@
                             android:layout_height="match_parent"
                             android:dropDownWidth="150dp"
                             android:gravity="center_vertical"
+                            app:backgroundTint="@color/spinner_triangle_color"
                             android:popupBackground="@color/white"
                              />
                 </LinearLayout>
@@ -402,6 +405,7 @@
                             android:layout_height="match_parent"
                             android:dropDownWidth="150dp"
                             android:gravity="center_vertical"
+                            app:backgroundTint="@color/spinner_triangle_color"
                             android:popupBackground="@color/white" />
                     
                 </LinearLayout>
@@ -469,7 +473,7 @@
                 </LinearLayout>
             </RelativeLayout>
 
-            <ImageView style="@style/DividerStyle" />
+            <ImageView style="@style/DividerStyleFull" />
 
             <TextView
                 android:text="@string/one_sealife"
@@ -502,6 +506,8 @@
                     app:theme="@style/ColorSwitchStyle"
                     />
             </LinearLayout>
+            <ImageView
+                style="@style/DividerStyleFull" />
             <LinearLayout
                 android:visibility="gone"
                 android:id="@+id/edit_layout"
