--- a/trunk/ddscanner/app/src/main/res/layout/activity_change_password.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_change_password.xml
@@ -39,6 +39,7 @@
                 android:hint="@string/new_password"
                 android:maxLength="32"
                 android:inputType="textPassword"
+                android:fontFamily="sans-serif"
                 style="@style/SigningInputStyle" />
 
             <ImageView style="@style/DividerStyleFull" />
