--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout
@@ -18,11 +18,11 @@
 
         <RelativeLayout
             android:id="@+id/map_control_layout"
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
             android:layout_marginRight="15dp">
 
             <ImageView
@@ -53,18 +53,20 @@
                 android:layout_below="@+id/zoom_minus"
                 android:layout_marginTop="23dp"
                 android:background="@drawable/background_map_tools">
+
                 <ImageView
                     android:id="@+id/go_to_my_location"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
                     android:src="@drawable/ic_my_location" />
+
                 <com.rey.material.widget.ProgressView
-                    android:visibility="gone"
                     android:id="@+id/progressBar"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_centerInParent="true"
+                    android:visibility="gone"
                     app:pv_autostart="true"
                     app:pv_circular="true"
                     app:pv_progressMode="indeterminate"
@@ -73,46 +75,51 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_gravity="bottom"
             android:id="@+id/dive_spot_info_layout"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="93dp"
+            android:layout_gravity="bottom"
             android:background="@drawable/iw_card_wreck"
             android:orientation="vertical"
+            android:paddingLeft="28dp"
             android:visibility="gone">
 
-            <TextView
-                android:id="@+id/dive_spot_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="20dp"
-                android:ellipsize="end"
-                android:lines="1"
-                tools:text="Racha yai wrecks fds fds fds fsdf sdf sd ds"
-                android:textColor="@color/white"
-                android:textSize="22sp" />
-
             <LinearLayout
-                android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/dive_spot_title"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="3dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal" />
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/object"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/rating"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="3dp"
-                tools:text="Wreck"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/dive_spot_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="30dp"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:textColor="@color/white"
+                    android:textSize="19sp"
+                    tools:text="Racha yai wrecks fds fds fds fsdf sdf sd ds" />
+
+                <LinearLayout
+                    android:id="@+id/rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/dive_spot_title"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="horizontal" />
+
+                <TextView
+                    android:id="@+id/object"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rating"
+                    android:layout_marginTop="3dp"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    tools:text="Wreck" />
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -169,15 +176,16 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="@string/please_choose_another_location" />
+
             <Button
-                android:visibility="visible"
                 android:id="@+id/showMapContinue"
-                android:layout_below="@+id/subtext"
-                android:layout_width="200dp"
-                android:layout_marginTop="174dp"
-                android:layout_height="wrap_content"
                 style="@style/OrangeButtons"
-                android:text="@string/continue_search"/>
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/subtext"
+                android:layout_marginTop="174dp"
+                android:text="@string/continue_search"
+                android:visibility="visible" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -205,12 +213,12 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginTop="15dp"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:background="@drawable/border"
-            android:gravity="center"
             android:text="@string/please_zoom_in_to_request_dive_spots"
             android:textSize="16sp" />
     </RelativeLayout>
@@ -219,19 +227,19 @@
         android:id="@+id/map_list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_margin="14dp"
+        android:scaleType="center"
         android:src="@drawable/ic_acb_list"
-        app:backgroundTint="@color/white"
-        android:scaleType="center"/>
+        app:backgroundTint="@color/white" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_ds_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="14dp"
         android:scaleType="center"
         android:src="@drawable/ic_acb_plus"
