--- a/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
@@ -4,7 +4,8 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <include layout="@layout/view_no_location_found"/>
+    <include
+        layout="@layout/view_no_location_found"/>
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
