--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -58,11 +58,10 @@
                             app:loadImageFrom="@{userProfileViewModel}" />
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="50dp"
                             android:orientation="vertical"
                             android:paddingRight="20dp"
-                            android:gravity="center_vertical"
-                            android:paddingTop="3dp">
+                            android:gravity="center_vertical">
 
                             <TextView
                                 android:id="@+id/user_name"
