--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -59,9 +59,8 @@
     </style>
 
     <style name="AddDsCharTitleStyle">
-        <item name="android:textSize">@dimen/add_ds_char_title</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/black_text</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColorHint">#B2B2B2</item>
         <item name="android:background">@android:color/transparent</item>
@@ -147,7 +146,7 @@
         <item name="android:layout_width">65dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:scaleType">center</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginTop">5dp</item>
     </style>
 
     <style name="CharacteristicsDiveSpotListTitle">
@@ -314,7 +313,6 @@
         <item name="android:paddingTop">7dp</item>
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <style name="PhotosTabDisabled">
@@ -323,7 +321,6 @@
         <item name="android:paddingTop">7dp</item>
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:background">@null</item>
     </style>
 
