--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -527,9 +527,9 @@
 
                                 <RatingBar
                                     android:id="@+id/rating_bar"
-                                    style="@style/CustomRatingBar"
+                                    style="@style/ModalRatingBar"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="31dp"
+                                    android:layout_height="30dp"
                                     android:layout_gravity="center_horizontal"
                                     android:layout_marginTop="19dp"
                                     android:numStars="5"
