--- a/trunk/ddscanner/app/src/main/res/layout/item_achivement_title_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achivement_title_details.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ddscanner.screens.achievements.AchievementTitleDetailsViewModel" />
+    </data>
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,9 +22,12 @@
             android:id="@+id/flag"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:src="@drawable/th"/>
+            android:src="@color/photos_placeholder"
+            android:layout_centerVertical="true"
+            bind:loadCountryFlag="@{viewModel}"/>
 
         <TextView
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/flag"
             android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
@@ -27,10 +37,11 @@
             android:textStyle="normal"
             android:textColor="#2b2b2b"
             android:letterSpacing="0.01"
-            tools:text="Thailand"
+            android:text="@{viewModel.achievementTitleDetails.country.name}"
             />
 
         <TextView
+            app:setProgressText="@{viewModel}"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
@@ -51,7 +62,8 @@
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        android:background="@drawable/progress_view_background_shape"/>
+        android:background="@drawable/progress_view_background_shape"
+        app:setProgress="@{viewModel}"/>
 
     <TextView
         android:layout_marginTop="5dp"
@@ -63,6 +75,8 @@
         android:textColor="#a3a3a3"
         android:letterSpacing="0.02"
         android:lineSpacingExtra="5sp"
+        android:text="@{viewModel.achievementTitleDetails.actions}"
         tools:text="3 new spots, 8 edited spots, 24 reviews, 38 check-ins"
         />
 </LinearLayout>
+</layout>
