--- a/trunk/ddscanner/app/src/main/res/layout/dialog_achievement_popup.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_achievement_popup.xml
@@ -35,22 +35,28 @@
 
         <com.klinker.android.link_builder.LinkConsumableTextView
             android:gravity="center"
-            android:id="@+id/text"
-            android:layout_marginTop="14dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="35dp"
-            android:paddingRight="35dp"
             android:textSize="15sp"
-            android:textColor="#717171"
-            android:layout_marginBottom="10dp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#7a8091"
+            android:letterSpacing="0.02"
+            android:lineSpacingExtra="8sp"
+            android:layout_marginLeft="45dp"
+            android:layout_marginRight="45dp"
+            android:layout_marginTop="14dp"
+            tools:text="Your first comment brought you 15 points! Stay active to get the title of Diver"
             app:setTextFrom="@{viewModel}"/>
 
         <TextView
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="25dp"
+            android:paddingTop="34dp"
+            android:paddingBottom="40dp"
+            android:paddingLeft="45dp"
+            android:paddingRight="45dp"
             android:text="@string/ok_i_got_it"
             android:gravity="center"
             android:textSize="15sp"
