--- a/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
@@ -277,7 +277,7 @@
                             android:text="@string/change_password_edit" />
                         <ImageView
                             android:layout_alignParentBottom="true"
-                            style="@style/DividerStyle" />
+                            style="@style/DividerStyleFull" />
                     </RelativeLayout>
                 </LinearLayout>
 
