--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
@@ -4,20 +4,23 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="60dp"
+    android:minHeight="54dp"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="15dp"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/ic_star_title"
         android:scaleType="center"
         />
 
     <com.klinker.android.link_builder.LinkConsumableTextView
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="9dp"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="18dp"
         android:id="@+id/notification_text"
@@ -27,6 +30,7 @@
         android:layout_centerVertical="true"
         android:textColor="@color/black_text"
         android:textSize="13sp"
+        android:lineSpacingExtra="2sp"
         android:layout_toRightOf="@+id/user_avatar"/>
     <ImageView
         android:layout_toRightOf="@+id/user_avatar"
