--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
@@ -4,15 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:minHeight="60dp"
+    android:minHeight="54dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="15dp"
-        android:src="@drawable/review_avatar" />
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/review_avatar"
+        android:scaleType="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +24,7 @@
         android:layout_centerVertical="true"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="18dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="9dp"
         android:layout_toRightOf="@+id/user_avatar"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -31,6 +35,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black_text"
             android:textSize="13sp"
+            android:lineSpacingExtra="2sp"
             tools:text="Alexander Korshin started working as an instructor at your dive center." />
 
         <android.support.v7.widget.RecyclerView
