--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_single_photo.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_single_photo.xml
@@ -4,19 +4,23 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="60dp"
+    android:minHeight="54dp"
     android:background="?attr/selectableItemBackground" >
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="15dp"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/review_avatar"
+        android:scaleType="center"
         />
 
     <com.klinker.android.link_builder.LinkConsumableTextView
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="9dp"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="15dp"
         android:id="@+id/notification_text"
@@ -26,15 +30,16 @@
         android:layout_centerVertical="true"
         android:textColor="@color/black_text"
         android:textSize="13sp"
+        android:lineSpacingExtra="2sp"
         android:layout_toRightOf="@+id/user_avatar"
         android:layout_toLeftOf="@+id/added_photo"/>
 
     <ImageView
         android:id="@+id/added_photo"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="10dp"
+        android:layout_width="34dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="12dp"
         android:src="@drawable/review_avatar"
         android:layout_alignParentRight="true"
         />
