--- a/trunk/ddscanner/app/src/main/res/layout/activity_change_password.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_change_password.xml
@@ -24,15 +24,11 @@
                 android:id="@+id/current_password"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="@android:color/transparent"
-                android:gravity="center_vertical"
                 android:hint="@string/current_password"
-                android:lines="1"
                 android:maxLength="32"
                 android:inputType="textPassword"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black_text"
-                android:textColorHint="#a3a3a3" />
+                style="@style/SigningInputStyle"/>
 
             <ImageView style="@style/DividerStyleFull" />
 
@@ -40,15 +36,11 @@
                 android:id="@+id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="@android:color/transparent"
-                android:gravity="center_vertical"
                 android:hint="@string/new_password"
-                android:lines="1"
                 android:maxLength="32"
                 android:inputType="textPassword"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black_text"
-                android:textColorHint="#a3a3a3" />
+                style="@style/SigningInputStyle" />
 
             <ImageView style="@style/DividerStyleFull" />
 
@@ -56,14 +48,10 @@
                 android:id="@+id/new_password_repeat"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="@android:color/transparent"
-                android:gravity="center_vertical"
                 android:hint="@string/repeat_new_password"
                 android:inputType="textPassword"
                 android:fontFamily="sans-serif"
-                android:lines="1"
-                android:textColor="@color/black_text"
-                android:textColorHint="#a3a3a3" />
+                style="@style/SigningInputStyle" />
         </LinearLayout>
 
         <Button
