--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -77,4 +77,8 @@
 
     <color name="blue_button_text_color">#e3e9fb</color>
 
+    <color name="blue_button_background_color">#283E75</color>
+
+    <color name="achievement_progress_color">#5a74b7</color>
+
 </resources>
