--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -82,7 +82,8 @@
             android:background="@drawable/iw_card_wreck"
             android:orientation="vertical"
             android:paddingLeft="28dp"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:ignore="RtlSymmetry">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -105,7 +106,6 @@
                     android:id="@+id/rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/dive_spot_title"
                     android:layout_marginTop="3dp"
                     android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal" />
@@ -114,7 +114,6 @@
                     android:id="@+id/object"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/rating"
                     android:layout_marginTop="3dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
