--- a/trunk/ddscanner/app/src/main/res/drawable/achievemnt_item_profile_background.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/achievemnt_item_profile_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#f9f9f9" />
+    <solid android:color="@color/achievement_item_background" />
     <stroke android:color="#f1f1f1" android:width="1dp" />
     <corners android:radius="2dp" />
 </shape>
