--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -122,18 +122,17 @@
                                 android:orientation="vertical"
                                 app:layout_widthPercent="25%">
 
-                                <TextView
+                                <com.ddscanner.ui.views.ProfileCountersTextView
                                     android:layout_marginLeft="0dp"
                                     android:id="@+id/user_comments"
                                     style="@style/ProfileNumberDivespotsSrtyle"
-                                    android:text="@{String.valueOf(profileFragmentViewModel.user.counters.commentsCount)}"
+                                    app:countReviewsFrom="@{profileFragmentViewModel}"
                                     tools:text="321" />
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="sans-serif-medium"
                                     android:text="@string/reviews_profile"
-                                    android:textColor="#959595"
+                                    android:textColor="@color/profile_counter_gray_color"
                                     android:textSize="12sp" />
                             </LinearLayout>
 
@@ -146,19 +145,18 @@
                                 android:orientation="vertical"
                                 app:layout_widthPercent="25%">
 
-                                    <TextView
+                                    <com.ddscanner.ui.views.ProfileCountersTextView
                                         android:layout_marginLeft="0dp"
                                         android:id="@+id/user_likes"
                                         style="@style/ProfileNumberDivespotsSrtyle"
-                                        android:text="@{String.valueOf(profileFragmentViewModel.user.counters.likesCount)}"
+                                        app:countLikesFrom="@{profileFragmentViewModel}"
                                         tools:text="321" />
 
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-medium"
                                         android:text="@string/likes_profile"
-                                        android:textColor="#959595"
+                                        android:textColor="@color/profile_counter_gray_color"
                                         android:textSize="12sp" />
                             </LinearLayout>
 
@@ -171,9 +169,42 @@
                                 android:orientation="vertical"
                                 app:layout_widthPercent="25%">
 
-                                <TextView
+                                <com.ddscanner.ui.views.ProfileCountersTextView
                                     android:layout_marginLeft="0dp"
                                     android:id="@+id/user_dislikes"
+                                    style="@style/ProfileNumberDivespotsSrtyle"
+                                    app:countDislikesFrom="@{profileFragmentViewModel}"
+                                    tools:text="321" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/dislikes"
+                                    android:textColor="@color/profile_counter_gray_color"
+                                    android:textSize="12sp" />
+
+                            </LinearLayout>
+                            <View
+                                android:id="@+id/divider"
+                                android:layout_toRightOf="@+id/dislikeLayout"
+                                android:layout_height="32dp"
+                                android:layout_width="1dp"
+                                android:background="#ebebeb"
+                                android:layout_centerVertical="true"/>
+
+                            <LinearLayout
+                                android:layout_marginLeft="20dp"
+                                android:id="@+id/points_layout"
+                                android:layout_height="64dp"
+                                android:layout_toRightOf="@+id/divider"
+                                android:gravity="center_vertical"
+                                android:onClick="@{handlers::showDislikes}"
+                                android:orientation="vertical"
+                                app:layout_widthPercent="25%">
+
+                                <com.ddscanner.ui.views.ProfileCountersTextView
+                                    android:layout_marginLeft="0dp"
+                                    android:id="@+id/user_points"
                                     style="@style/ProfileNumberDivespotsSrtyle"
                                     android:text="@{String.valueOf(profileFragmentViewModel.user.counters.dislikesCount)}"
                                     tools:text="321" />
@@ -181,9 +212,8 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="sans-serif-medium"
-                                    android:text="@string/dislikes"
-                                    android:textColor="#959595"
+                                    android:text="@string/points"
+                                    android:textColor="@color/profile_counter_gray_color"
                                     android:textSize="12sp" />
 
                             </LinearLayout>
