--- a/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_achievment_profile.xml
@@ -20,10 +20,11 @@
         tools:text="Diver" />
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="10dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -31,6 +32,8 @@
             android:id="@+id/countries"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:gravity="right"
             android:orientation="horizontal" />
 
         <TextView
