--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -81,4 +81,8 @@
 
     <color name="achievement_progress_color">#5a74b7</color>
 
+    <color name="achievement_item_background">#f9f9f9</color>
+
+    <color name="profile_counter_gray_color">#959595</color>
+
 </resources>
