--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -98,6 +98,7 @@
                         </LinearLayout>
 
                         <TextView
+                            android:lineSpacingExtra="6sp"
                             android:paddingLeft="20dp"
                             android:paddingRight="20dp"
                             android:paddingTop="14dp"
