--- a/trunk/ddscanner/app/src/main/res/layout/activity_reviews.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_reviews.xml
@@ -34,6 +34,7 @@
         android:src="@drawable/ic_acb_edit"
         app:backgroundTint="@color/orange"
         android:layout_margin="14dp"
+        android:scaleType="center"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
