--- a/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <com.ddscanner.ui.views.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -103,5 +103,5 @@
                 android:overScrollMode="never"/>
 
         </RelativeLayout>
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </com.ddscanner.ui.views.SwipeRefreshLayout>
 </layout>
