~ update perfomance of notification list

--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -54,6 +54,7 @@
                     android:text="@string/share_a_few_words" />
 
                 <EditText
+                    android:lineSpacingExtra="@dimen/line_spacing"
                     android:id="@+id/review_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
