--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -164,7 +164,7 @@
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp"
                             android:paddingTop="15dp"
-                            android:lineSpacingExtra="6sp"
+                            android:lineSpacingExtra="@dimen/line_spacing"
                             android:text="@{diveSpotViewModel.diveSpotDetailsEntity.description}"
                             android:textColor="@color/black_text"
                             android:textSize="15sp"
