--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ddscanner.ui.views.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp">
-    <ImageView
+    <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
+        app:shape_mode="round_rect"
+        app:round_radius="@dimen/photos_radius"
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,7 +19,7 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_text"
+        android:background="@drawable/more_photos_bg"
         android:alpha="0.9"
         tools:text="@string/_1"
         android:textColor="@color/white"
