--- a/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_search_location.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/go_to_my_location"
         android:background="?attr/selectableItemBackground"
         android:gravity="center"
@@ -30,6 +31,7 @@
             android:textColor="@color/black_text"/>
     </LinearLayout>
     <ImageView
+        android:visibility="gone"
         style="@style/DividerStyleFull" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/places_recyclerview"
