--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -84,7 +84,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:lineSpacingExtra="6sp"
+                        android:lineSpacingExtra="@dimen/line_spacing"
                         android:paddingLeft="20dp"
                         android:paddingRight="20dp"
                         android:paddingTop="14dp"
