--- a/trunk/ddscanner/app/src/main/res/layout/view_review_body.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_review_body.xml
@@ -19,7 +19,7 @@
             android:paddingBottom="5dp"
             android:textColor="@color/black_text"
             android:textSize="14sp"
-            android:lineSpacingExtra="6sp"
+            android:lineSpacingExtra="@dimen/line_spacing"
             tools:text="Vwry very good spot in whateewer very good play market bla bla bla bla " />
 
         <TextView
@@ -30,7 +30,7 @@
             android:gravity="left|center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:text="Show more"
+            tools:text="Show more"
             android:textColor="@color/primary"
             android:textSize="14sp"
             android:visibility="gone" />
