--- a/trunk/ddscanner/app/src/main/res/values/dimens.xml
+++ b/trunk/ddscanner/app/src/main/res/values/dimens.xml
@@ -31,5 +31,6 @@
     <dimen name="base_avatar_diameter">36dp</dimen>
 
     <dimen name="button_height">50dp</dimen>
-
+    <dimen name="photos_radius">2dp</dimen>
+    <dimen name="line_spacing">5sp</dimen>
 </resources>
